--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,8 @@ correctly replicate the same munging it performed during model training.</p>
 #' # The munge function uses the attached "mungepieces" attribute, a list of
 #' # trained mungepieces.
 munge <- function(data, mungelist, stagerunner = FALSE, list = FALSE, parse = TRUE) {
-  stopifnot(is.data.frame(data))
+  stopifnot(is.data.frame(data) ||
+            (is.environment(data) && exists("data", envir = data, inherits = FALSE)))
 
   if (length(mungelist) == 0L) {
     return(data)
